--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
-
+name: Build ATAK Release
 on:
   push:
     branches: [ master ]
@@ -11,7 +10,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -22,19 +20,13 @@ jobs:
       with:
         java-version: 1.8
     
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
     - name: Android NDK toolchain Setup
       uses: ravinderjangra/android-ndk-toolchain-setup@0.2
       with:
-        api: # default is 21
-    
-    - name: Grant execute permission for prebuild script
-      run: chmod +x ./AndroidTacticalAssaultKit-CIV/scripts/prebuild.sh
+        api: 21
     
     - name: Run Prebuild Script
-      run: ./AndroidTacticalAssaultKit-CIV/scripts/prebuild.sh
+      run: bash ./AndroidTacticalAssaultKit-CIV/scripts/prebuild.sh
     
     - name: Build with Gradle
-      run: ./gradlew assembleCivRelease
+      run: bash ./AndroidTacticalAssaultKit-CIV/atak/gradlew assembleCivRelease
