--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
       uses: ravinderjangra/android-ndk-toolchain-setup@0.2
       with:
         api: 21
+        arch: arm
     
     - name: Run Prebuild Script
       run: bash ./AndroidTacticalAssaultKit-CIV/scripts/prebuild.sh
