--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: 1.8
     
     - name: Run Prebuild Script
-      run: ./AndroidTacticalAssaultKit-CIV/scripts/prebuild.sh
+      run: ./scripts/prebuild.sh
     
     - name: Build with Gradle
-      run: ./AndroidTacticalAssaultKit-CIV/atak/gradlew assembleCivRelease
+      run: ./atak/gradlew assembleCivRelease
