--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: 1.8
     
     - name: Run Prebuild Script
-      run: ./scripts/prebuild.sh
+      run: cd scripts && ./prebuild.sh
     
     - name: Build with Gradle
       run: ./atak/gradlew assembleCivRelease
