--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,17 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    
-    - name: Install NDK
-      run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install 'ndk;21.0.6113669'
-      
+    - name: Install Android SDK
+      uses: malinskiy/action-android/install-sdk@release/0.0.3
+    - name: Install Android NDK
+        uses: ravinderjangra/android-ndk-toolchain-setup@0.2
+        with:
+          api: '21'
+          arch: 'arm'
+          install-location: 'toolchains'
+          force: true
+    - name: Display env
+      run: env
     - name: Run Prebuild Script
       run: cd scripts && ./prebuild.sh
     
