--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,25 +14,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
     - name: Install Android SDK
       uses: malinskiy/action-android/install-sdk@release/0.0.3
-      
     - name: Install Android NDK
       uses: ravinderjangra/android-ndk-toolchain-setup@0.2
       with:
         api: '21'
         arch: 'arm'
-        install-location: 'toolchains'
+        install-location: '/home/runner/toolchains'
         force: true
-    - name: Display env
-      run: env
     - name: Run Prebuild Script
-      run: cd scripts && ./prebuild.sh
+      run: ANDROID_NDK=/home/runner/toolchains cd scripts && ./prebuild.sh
+      env:
+        ANDROID_NDK: /home/runner/toolchains
     
     - name: Build with Gradle
       run: ./atak/gradlew assembleCivRelease
