--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,12 +48,10 @@ jobs:
       
     - name: Install Android NDK
       if: steps.cache-ndk.outputs.cache-hit != 'true'
-      uses: ravinderjangra/android-ndk-toolchain-setup@0.2
-      with:
-        api: '12'
-        arch: 'arm'
-        install-location: '/home/runner/toolchains'
-        force: true
+      run: |
+        mkdir /home/runner/ndk && 
+        curl -O https://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip && 
+        unzip android-ndk-r12b-linux-x86_64.zip -t /home/runner/ndk
     
     - name: Cache Prebuild
       id: cache-prebuild
@@ -68,11 +66,12 @@ jobs:
       if: steps.cache-prebuild.outputs.cache-hit != 'true'
       run: cd scripts && ./prebuild.sh
       env:
-        ANDROID_NDK: /usr/local/lib/android/sdk/ndk-bundle/
+        ANDROID_NDK: /home/runner/ndk/android-ndk-r12b
         
     - name: Run Build Script
       run: cd scripts && ./build.sh
       env:
+        ANDROID_NDK: /home/runner/ndk/android-ndk-r12b
         TAK_KEY_FILE_PATH: tbd
         TAK_KEY_FILE_PASSWD: tbd
         TAK_KEY_ALIAS: tbd
