--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
       run: |
         mkdir /home/runner/ndk && 
         curl -O https://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip && 
-        unzip android-ndk-r12b-linux-x86_64.zip -t /home/runner/ndk
+        unzip android-ndk-r12b-linux-x86_64.zip -d /home/runner/ndk
     
     - name: Cache Prebuild
       id: cache-prebuild
