--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,10 +48,7 @@ jobs:
       
     - name: Install Android NDK
       if: steps.cache-ndk.outputs.cache-hit != 'true'
-      run: |
-        mkdir /home/runner/ndk && 
-        curl -O https://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip && 
-        unzip android-ndk-r12b-linux-x86_64.zip -d /home/runner/ndk
+      run: echo "y" | sudo /usr/local/lib/android/sdk/tools/bin/sdkmanager --install "ndk;12.1.2977051" --sdk_root=${ANDROID_SDK_ROOT}
     
     - name: Cache Prebuild
       id: cache-prebuild
@@ -66,12 +63,12 @@ jobs:
       if: steps.cache-prebuild.outputs.cache-hit != 'true'
       run: cd scripts && ./prebuild.sh
       env:
-        ANDROID_NDK: /home/runner/ndk/android-ndk-r12b
+        ANDROID_NDK: /usr/local/lib/android/sdk/ndk-bundle
         
     - name: Run Build Script
       run: cd scripts && ./build.sh
       env:
-        ANDROID_NDK: /home/runner/ndk/android-ndk-r12b
+        ANDROID_NDK: /usr/local/lib/android/sdk/ndk-bundle
         TAK_KEY_FILE_PATH: tbd
         TAK_KEY_FILE_PASSWD: tbd
         TAK_KEY_ALIAS: tbd
