--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,8 @@ jobs:
         mkdir /home/runner/ndk && 
         curl -O https://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip && 
         unzip -q android-ndk-r12b-linux-x86_64.zip -d ./ &&
-        sudo mv ./android-ndk-r12b /usr/local/lib/android/sdk/ndk-bundle
+        sudo mv ./android-ndk-r12b /usr/local/lib/android/sdk/ndk-bundle &&
+        sdkmanager --install "ndk;12.1.2977051"
         
     - name: Cache Prebuild
       id: cache-prebuild
