--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,8 +52,7 @@ jobs:
         mkdir /home/runner/ndk && 
         curl -O https://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip && 
         unzip -q android-ndk-r12b-linux-x86_64.zip -d ./ &&
-        sudo mv ./android-ndk-r12b /usr/local/lib/android/sdk/ndk-bundle &&
-        sdkmanager --install "ndk;12.1.2977051"
+        sudo mv ./android-ndk-r12b /usr/local/lib/android/sdk/ndk-bundle
         
     - name: Cache Prebuild
       id: cache-prebuild
@@ -68,7 +67,7 @@ jobs:
       if: steps.cache-prebuild.outputs.cache-hit != 'true'
       run: cd scripts && ./prebuild.sh
       env:
-        ANDROID_NDK: /usr/local/lib/android/sdk/ndk-bundle
+        ANDROID_NDK: /usr/local/lib/android/sdk/ndk-bundle/toolchains
         
     - name: Run Build Script
       run: cd scripts && ./build.sh
